# LR-1-algorithm

./: CMakeLists.txt  README.md  analyser.cpp  condition.cpp  grammar.cpp  grammar.txt  main.cpp  situation.cpp  words.txt
examples/: grammar_0.txt  grammar_1.txt  words_0.txt
src/: analyser.cpp  analyser.h  condition.cpp  condition.h  grammar.cpp  grammar.h  situation.cpp  situation.h  solution.cpp  solution.h
tests/: my_test.cpp  test1.cpp
tests/examples/: grammar_0.txt  grammar_1.txt  grammar_3.txt  words_0.txt  words_1.txt  words_3.txt
tests/first_testing/: grammar.txt
